Fix: Download button overflow

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -634,6 +634,12 @@
   }
 }
 
+.distribution-details{
+  max-width: 60%;
+  word-break: break-all;
+}
+
+
 // import empty theme after styles are loaded 
 @import "empty_theme";
 @import "datasets_catalogs";
